# spilna_peremoga_website

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.json  docker-compose.db.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  sitemap.xml
locale/en/LC_MESSAGES/: django.po
main/: admin.py  context_processors.py  emailing.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_project_projectbadge_projectimage.py  0003_orgunit_project_units.py  0004_remove_project_units_project_body_project_cover_and_more.py  0005_remove_project_body_remove_project_cover_and_more.py  0006_projectdetail_project_detail_projectdetailimage.py  0007_projectdetailgridimage.py  0008_project_is_reverse_education_and_more.py  0009_projectdetail_video_file_projectdetail_video_poster.py  0010_newsarticle_newsimage_and_more.py
main/templates/main/: about.html  contact_autoreply.html  contact_to_manager.html  go_creative_agency.html  go_sp_production.html  go_spilna_peremoga.html  index.html  project_detail.html  projects.html
main/templates/news/: news_detail.html  news_list.html
nginx/: nginx.conf  nginx.http.conf
nginx/conf.d/: app.conf  mail.conf  mail.conf.off
static/: sitemap.xml
static/css/: styles.css
static/css/main/: about.css  go.css  index.css  news.css  project_detail.css  projects.css
static/favicons/: site.webmanifest
templates/: base.html
templates/admin/projectdetail/: bulk_upload_images.html
website_sp/: asgi.py  settings.py  urls.py  wsgi.py
